# TRSA

./: .gitignore  LICENSE  README.md  alunos.grupo  eclipse_project.sh
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/kelp_ros/: ServoControl.h  ServoControlRequest.h  ServoControlResponse.h
devel/include/octomap_server/: OctomapServerConfig.h
devel/include/t2_package/: Activate.h  ActivateRequest.h  ActivateResponse.h  GameStatus.h  SetBet.h  SetBetRequest.h  SetBetResponse.h  Set_Robot_Model.h  Set_Robot_ModelRequest.h  Set_Robot_ModelResponse.h  robot_id.h
devel/include/t4_package/: ACState.h  ACStateRequest.h  ACStateResponse.h  AirBeacon.h  DesiredTemperature.h  DesiredTemperatureRequest.h  DesiredTemperatureResponse.h  SetTemperature.h  SetTemperatureRequest.h  SetTemperatureResponse.h
devel/include/t8_package/: cup_info.h  thermal_msg.h
devel/include/trabfinal/: altitudeUAV.h  controlUAV.h  gpsXY.h  imagePosUAV.h
devel/share/bms_package/cmake/: bms_packageConfig.cmake
devel/share/kelp_ros/cmake/: kelp_ros-msg-extras.cmake  kelp_ros-msg-paths.cmake  kelp_rosConfig.cmake
devel/share/lesson6_package_pcl/cmake/: lesson6_package_pclConfig.cmake
devel/share/octomap_server/cmake/: octomap_serverConfig.cmake
devel/share/t1_package/cmake/: t1_packageConfig.cmake
devel/share/t2_package/cmake/: t2_package-msg-extras.cmake  t2_package-msg-paths.cmake  t2_packageConfig.cmake
devel/share/t4_package/cmake/: t4_package-msg-extras.cmake  t4_package-msg-paths.cmake  t4_packageConfig.cmake
devel/share/t5_package/cmake/: t5_packageConfig.cmake
devel/share/t7_package/cmake/: t7_packageConfig.cmake
devel/share/t8_package/cmake/: t8_package-msg-extras.cmake  t8_package-msg-paths.cmake  t8_packageConfig.cmake
devel/share/trabfinal/cmake/: trabfinal-msg-extras.cmake  trabfinal-msg-paths.cmake  trabfinalConfig.cmake
devel/share/tripod_description/cmake/: tripod_descriptionConfig.cmake
src/bms_package/: CMakeLists.txt  package.xml
src/bms_package/src/: Bms.c
src/kelp_ros/: CMakeLists.txt  package.xml
src/kelp_ros/data/models/: buoy.mtl  circle.mtl  cop_car.mtl  fishing_boat.mtl  gps_beacon.mtl  ground.mtl  helipad.mtl  jackal_robot.3ds  mobile_robot.mtl  navy_vessel.mtl  old_house.mtl  rectangle.mtl  sand_ground.mtl  sea.mtl  sea_scene.mtl  simple_boat.mtl  triangle.mtl  vigil.mtl  wall.mtl
src/kelp_ros/srv/: ServoControl.srv
src/lesson6_package_pcl/: CMakeLists.txt  package.xml
src/lesson6_package_pcl/include/lesson6_package_pcl/: box_segmentation.h  box_segmentation_1filter.h  laser_2_cloud.h
src/lesson6_package_pcl/launch/: laser_2_cloud.launch  octomap_mapping.launch
src/lesson6_package_pcl/params/: octomap_mapping.yaml
src/lesson6_package_pcl/src/: box_segmentation.cpp  box_segmentation_1filter.cpp  box_segmentation_1filter_node.cpp  laser_2_cloud.cpp  laser_2_cloud_node.cpp
src/t1_package/: CMakeLists.txt  package.xml  test1.yaml
src/t1_package/launch/: all_nodes.launch  my_first_node.launch  turtlesim.launch
src/t1_package/src/: node.cpp  node2.cpp
src/t2_package/: CMakeLists.txt  package.xml
src/t2_package/include/t2_package/: GameEngine.h
src/t2_package/launch/: rps_game.launch
src/t2_package/msg/: GameStatus.msg  robot_id.msg
src/t2_package/src/: GameEngine.cpp  client.cpp  game_node.cpp  player_node.cpp  publisher.cpp  subscriber.cpp
src/t2_package/srv/: Activate.srv  SetBet.srv  Set_Robot_Model.srv
src/t4_package/: CMakeLists.txt  package.xml
src/t4_package/include/t4_package/: ACController.h  Thermometer.h
src/t4_package/launch/: ac.launch
src/t4_package/msg/: AirBeacon.msg
src/t4_package/src/: ACController.cpp  Thermometer.cpp  ac_controller_node.cpp  thermometer_node.cpp
src/t4_package/srv/: SetTemperature.srv
src/t5_package/: CMakeLists.txt  manifest.xml  package.xml
src/t5_package/calibration/: trsa_camera.yaml
src/t5_package/include/t5_package/: ImageConvert.h
src/t5_package/launch/: image_processed.launch
src/t5_package/src/: ImageConvert.cpp  camera_driver.cpp  camera_stream.cpp  image_convert_node.cpp  image_reader.cpp
src/t7_package/: CMakeLists.txt  package.xml
src/t7_package/include/t7_package/: TfBroadcaster.h  TfSubscriber.h
src/t7_package/src/: TfBroadcaster.cpp  TfSubscriber.cpp  tf_broadcaster_node.cpp  tf_subscriber_node.cpp
src/t8_package/: CMakeLists.txt  package.xml
src/t8_package/include/t8_package/: aggregation.h  cup_segmentation.h  imageReader.h  laser_2_cloud.h
src/t8_package/launch/: octomap_mapping.launch
src/t8_package/msg/: cup_info.msg  thermal_msg.msg
src/t8_package/params/: octomap_mapping.yaml
src/t8_package/src/: aggregation.cpp  aggregation_node.cpp  cup_segmentation.cpp  cup_segmentation_node.cpp  imageReader.cpp  image_reader_node.cpp  laser_2_cloud.cpp  laser_2_cloud_node.cpp
src/trabfinal/: CMakeLists.txt  package.xml
src/trabfinal/include/trabfinal/: GpsControl.h  TfBroadcaster.h  UAVController.h  gpsControl.h  imageControl.h  laserControl.h  laser_2_cloud.h  measuresReunion.h  uav_segmentation.h
src/trabfinal/launch/: gps_image_land.launch  octomap_mapping.launch
src/trabfinal/msg/: altitudeUAV.msg  controlUAV.msg  imagePosUAV.msg
src/trabfinal/params/: octomap_mapping.yaml
src/trabfinal/rviz/: trabFinal.rviz
src/trabfinal/src/: GpsControl.cpp  GpsControlNode.cpp  TfBroadcaster.cpp  UAVController.cpp  UAVControllerNode.cpp  gpsControl.cpp  gpsControlNode.cpp  imageControl.cpp  image_control_node.cpp  laserControl.cpp  laserControlNode.cpp  laser_2_cloud.cpp  laser_2_cloud_node.cpp  measuresReunion.cpp  measuresReunionNode.cpp  tf_broadcaster_node.cpp  uav_segmentation.cpp  uav_segmentation_node.cpp
src/tripod_description/: CMakeLists.txt  package.xml
src/tripod_description/launch/: tripod_class.launch
src/tripod_description/robots/: tripod_class.urdf.xacro
src/tripod_description/rviz/: tripod.rviz
src/tripod_description/urdf/: tripod_library_class.urdf.xacro
src/tripod_description/urdf/sensors/: flir_quark_640.urdf.xacro  gopro.urdf.xacro  hokuyo_04lx_laser.gazebo.xacro  odroid_cam.urdf.xacro  (+1 more)
(+47 files in other folders)
